--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		No Start
 	</div>
 	<div class="kill">
-		No start
+		No Start
 	</div>
 	<div class="destroy">
 		No Start
 	</div>
 	<div class="delete">
-		No start
+		No Start
 	</div>
 </body>
 </html>
