--- a/index.html
+++ b/index.html
@@ -6,17 +6,9 @@
 	<title>Hack</title>
 </head>
 <body>
-	<div class="hack_site">
-		No Start
-	</div>
-	<div class="kill">
-		No Start
-	</div>
-	<div class="destroy">
-		No Start
-	</div>
-	<div class="delete">
-		No Start
-	</div>
+	<div class="hack_site">No Start</div>
+	<div class="kill">No Start</div>
+	<div class="destroy">No Start</div>
+	<div class="delete">No Start</div>
 </body>
 </html>
